Fixed image alignment; took out absolute position

--- a/main.css
+++ b/main.css
@@ -3,13 +3,6 @@
         font-family: Arial;
 }
 
-img {
-        position: absolute;
-        left: 0px;
-        top: 0px;
-        z-index: -1;
-}
-
 #links {
         text-align: center;
         float: left;
